[gd_scene load_steps=28 format=2]

[ext_resource path="res://Label_ITOW.gd" type="Script" id=2]
[ext_resource path="res://Label_Camera.gd" type="Script" id=3]
[ext_resource path="res://Panel_UIControls.gd" type="Script" id=4]
[ext_resource path="res://Label_FlySpeed.gd" type="Script" id=5]
[ext_resource path="res://GreenCheckerboard.png" type="Texture" id=6]
[ext_resource path="res://Gary.tscn" type="PackedScene" id=7]
[ext_resource path="res://LOScriptReplayer.tscn" type="PackedScene" id=8]
[ext_resource path="res://CameraRig.tscn" type="PackedScene" id=14]
[ext_resource path="res://eegg/EEgg.tscn" type="PackedScene" id=15]
[ext_resource path="res://Background.tscn" type="PackedScene" id=16]
[ext_resource path="res://CheckBox_Pause.gd" type="Script" id=17]
[ext_resource path="res://Main.gd" type="Script" id=18]
[ext_resource path="res://ProgressBar_Replay.gd" type="Script" id=19]
[ext_resource path="res://CheckBox_ShowControls.gd" type="Script" id=21]
[ext_resource path="res://CheckBox_ShowInfo.gd" type="Script" id=22]
[ext_resource path="res://LidarDataStorage.gd" type="Script" id=24]
[ext_resource path="res://LidarLines.gd" type="Script" id=26]
[ext_resource path="res://LOScriptReplayer.gd" type="Script" id=30]
[ext_resource path="res://HareScan2_Textured.tscn" type="PackedScene" id=34]
[ext_resource path="res://HareScan2_Bluescreen.tscn" type="PackedScene" id=35]

[sub_resource type="SpatialMaterial" id=1]
albedo_color = Color( 0.5, 0.5, 0.5, 1 )
albedo_texture = ExtResource( 6 )
uv1_scale = Vector3( 1000, 1000, 1000 )

[sub_resource type="CubeMesh" id=2]
material = SubResource( 1 )
size = Vector3( 2000, 1, 2000 )

[sub_resource type="ConvexPolygonShape" id=3]
points = PoolVector3Array( -1000, 0.5, 1000, 1000, 0.5, -1000, 1000, 0.5, 1000, -1000, 0.5, -1000, -1000, -0.5, 1000, 1000, -0.5, -1000, 1000, -0.5, 1000, -1000, -0.5, -1000, 1000, 0.5, 1000, -1000, 0.5, -1000, 1000, 0.5, -1000, -1000, 0.5, 1000, 1000, -0.5, 1000, -1000, -0.5, -1000, 1000, -0.5, -1000, -1000, -0.5, 1000, 1000, 0.5, 1000, -1000, -0.5, 1000, -1000, 0.5, 1000, 1000, -0.5, 1000, 1000, 0.5, -1000, -1000, -0.5, -1000, -1000, 0.5, -1000, 1000, -0.5, -1000 )

[sub_resource type="SpatialMaterial" id=4]
flags_unshaded = true
params_specular_mode = 4
albedo_color = Color( 0, 0, 1, 1 )

[sub_resource type="CubeMesh" id=5]
material = SubResource( 4 )
size = Vector3( 100, 100, 2 )

[sub_resource type="SpatialMaterial" id=6]
flags_transparent = true
flags_unshaded = true
flags_use_point_size = true
flags_do_not_receive_shadows = true
flags_disable_ambient_light = true
params_point_size = 10.0
albedo_color = Color( 0, 1, 0, 0.498039 )

[sub_resource type="SpatialMaterial" id=7]
flags_unshaded = true
flags_do_not_receive_shadows = true
flags_disable_ambient_light = true
vertex_color_use_as_albedo = true

[node name="Main" type="Node"]
pause_mode = 2
script = ExtResource( 18 )

[node name="FirstPerson" parent="." instance=ExtResource( 7 )]
pause_mode = 2
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 7 )

[node name="Panel_ShowControls" type="Panel" parent="."]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -260.0
margin_top = -1.0
margin_right = 6.10352e-05
margin_bottom = 24.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CheckBox_ShowControls" type="CheckBox" parent="Panel_ShowControls"]
pause_mode = 2
margin_right = 123.0
margin_bottom = 24.0
pressed = true
text = "Show controls"
script = ExtResource( 21 )

[node name="CheckBox_ShowInfo" type="CheckBox" parent="Panel_ShowControls"]
pause_mode = 2
margin_left = 125.0
margin_right = 149.0
margin_bottom = 24.0
pressed = true
text = "Show info"
script = ExtResource( 22 )

[node name="Panel_UIControls" type="Panel" parent="."]
pause_mode = 2
anchor_left = 1.0
anchor_right = 1.0
margin_left = -260.0
margin_top = 20.0
margin_bottom = 149.0
rect_pivot_offset = Vector2( 85.0426, 92 )
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CheckBox_Pause" type="CheckBox" parent="Panel_UIControls"]
anchor_right = 0.014
margin_top = -0.629967
margin_right = 108.36
margin_bottom = 23.37
pressed = true
text = "Pause"
script = ExtResource( 17 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CheckBox_Ground" type="CheckBox" parent="Panel_UIControls"]
margin_left = -6.10352e-05
margin_top = 18.8775
margin_right = 117.0
margin_bottom = 46.8775
pressed = true
text = "Ground"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CheckBox_GreenScreen" type="CheckBox" parent="Panel_UIControls"]
margin_left = 125.205
margin_top = 22.3304
margin_right = 244.046
margin_bottom = 46.3304
text = "Bluescreen"

[node name="Label_ReplaySpeed" type="Label" parent="Panel_UIControls"]
margin_left = 26.4627
margin_top = 73.3138
margin_right = 121.463
margin_bottom = 87.3138
text = "Replay speed:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SpinBox_ReplaySpeed" type="SpinBox" parent="Panel_UIControls"]
margin_left = 122.802
margin_top = 68.1663
margin_right = 219.802
margin_bottom = 92.1663
min_value = 0.001
step = 0.001
value = 1.0
exp_edit = true

[node name="Button_LoadClearLidarScript" type="Button" parent="Panel_UIControls"]
margin_left = 4.74908
margin_top = 101.849
margin_right = 253.749
margin_bottom = 121.849
text = "Load/clear LidarScript..."

[node name="HSlider_Transparency" type="HSlider" parent="Panel_UIControls"]
margin_left = 49.0
margin_top = 46.4983
margin_right = 255.0
margin_bottom = 62.4983
max_value = 256.0
value = 200.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Panel_UIControls"]
margin_left = 6.0
margin_top = 47.4983
margin_right = 46.0
margin_bottom = 61.4983
text = "Alpha:"

[node name="CheckBox_ShowHelp" type="CheckBox" parent="Panel_UIControls"]
margin_left = 124.531
margin_top = 0.357697
margin_right = 242.531
margin_bottom = 24.3577
text = "Show help"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel_Help" type="Panel" parent="."]
visible = false
margin_left = 15.0
margin_top = 12.0
margin_right = 614.0
margin_bottom = 528.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Panel_Help"]
margin_left = 11.0
margin_top = 11.0
margin_right = 572.0
margin_bottom = 495.0
text = "Quick instructions (keys):

-CTRL: toggle between fly and edit mode.
-Use your mouse to look around when in fly mode and using the first person camera (F1).
-W: go forward.
-S: go backward.
-A: go left.
-D: go right.
-Q: go down.
-E: go up.
-T: Increase first person's fly speed.
-G: Decrease first person's fly speed.
-B: Spawn a new 1 m3 box (cube).
-Left mouse button activate stick-type manipulator (not much of use here).
-Right mouse button activate plate-type manipulator (not much of use here).
-F1-F3: Change camera (F1 = first person, F2 = camera rig camera, F3 = back camera)
-R: Restart currently selected LOScript.
-P: Pause
-H: Hide \"Show controls\" / \"Show info\"-checkboxes.
-F5: Jump 5s back in LOScript
-F6: Jump 5s forward in LOScript
-F12: Full screen toggle

(You can hide this using \"Show help\"-checkbox on the top right corner.)"

[node name="Panel_AdditionalInfo" type="Panel" parent="."]
pause_mode = 2
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -400.0
margin_top = -116.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label_Camera" type="Label" parent="Panel_AdditionalInfo"]
margin_left = 13.0
margin_top = 7.51233
margin_right = 276.0
margin_bottom = 29.5123
text = "Camera"
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label_FlySpeed" type="Label" parent="Panel_AdditionalInfo"]
margin_left = 12.0636
margin_top = 32.3898
margin_right = 92.0636
margin_bottom = 46.3898
text = "Flying speed"
script = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label_ITOW" type="Label" parent="Panel_AdditionalInfo"]
margin_left = 12.0
margin_top = 56.0
margin_right = 138.0
margin_bottom = 70.0
rect_scale = Vector2( 3, 3 )
text = "Time:"
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ProgressBar_Replay" type="ProgressBar" parent="Panel_AdditionalInfo"]
margin_left = 0.89093
margin_top = 100.0
margin_right = 398.891
margin_bottom = 114.0
script = ExtResource( 19 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel_LoadLidarScript_Confirmation" type="Panel" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -191.0
margin_top = -197.0
margin_right = 196.0
margin_bottom = 125.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label_LidarScriptLoadingNote" type="Label" parent="Panel_LoadLidarScript_Confirmation"]
margin_left = 10.0
margin_top = 9.0
margin_right = 377.0
margin_bottom = 227.0
text = "Load LidarScript?

NOTE! Loading LidarScript (that is used to show a reconstruction of measured points and lidar's measurements) will eat huge amount of memory (about 4,7 GB) and loading will last several minutes and will freeze this app completely during loading. Probably this will crash the app if tried with less than 16 GB of RAM or when using 32-bit OS and/or Godot.

Clearing may also take some time.

Sorry for the inconvenience."
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button_LoadLidarScript" type="Button" parent="Panel_LoadLidarScript_Confirmation"]
margin_left = 9.0
margin_top = 241.404
margin_right = 377.0
margin_bottom = 261.404
text = "Load LidarScipt (read the note above!)"

[node name="Button_ClearLidarScript" type="Button" parent="Panel_LoadLidarScript_Confirmation"]
margin_left = 9.0
margin_top = 266.105
margin_right = 377.0
margin_bottom = 286.105
text = "Clear LidarScript"

[node name="Button_CancelLidarScriptOperation" type="Button" parent="Panel_LoadLidarScript_Confirmation"]
margin_left = 9.0
margin_top = 291.567
margin_right = 377.0
margin_bottom = 311.567
text = "Cancel (close)"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DirectionalLight" type="DirectionalLight" parent="."]
transform = Transform( 0.936268, -0.304932, 0.17441, 0.103808, 0.714482, 0.69191, -0.335598, -0.629708, 0.700601, 0, 10, 0 )
light_indirect_energy = 0.0
shadow_enabled = true

[node name="Background" parent="." instance=ExtResource( 16 )]

[node name="Ground" type="StaticBody" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.52, 0 )

[node name="GroundMeshInstance" type="MeshInstance" parent="Ground"]
mesh = SubResource( 2 )
material/0 = null

[node name="CollisionShape" type="CollisionShape" parent="Ground"]
shape = SubResource( 3 )

[node name="EEgg" parent="." instance=ExtResource( 15 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 3, 547.851 )

[node name="LOSolver_CameraRig" parent="." instance=ExtResource( 8 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.46194, 5.06226 )
loFilename = "res://GNSS_Stylus_Scripts/HareRig.LOScript"

[node name="GreenScreen" type="MeshInstance" parent="LOSolver_CameraRig"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -50 )
visible = false
cast_shadow = 0
mesh = SubResource( 5 )
material/0 = null

[node name="CameraRig" parent="LOSolver_CameraRig" instance=ExtResource( 14 )]

[node name="BackCamera" type="Camera" parent="LOSolver_CameraRig"]
transform = Transform( 1, 0, 0, 0, 0.955304, 0.295625, 0, -0.295625, 0.955304, 0, 0.753261, 2.89754 )
fov = 42.0
far = 1000.0

[node name="LidarObjectPoints" type="ImmediateGeometry" parent="."]
pause_mode = 1
visible = false
material_override = SubResource( 6 )

[node name="LidarDataStorage" type="Node" parent="."]
script = ExtResource( 24 )

[node name="LidarLines" type="ImmediateGeometry" parent="."]
material_override = SubResource( 7 )
script = ExtResource( 26 )
drawnLineTypes = 0
maxHistoryLength = 55

[node name="LOSolver_CameraEye" type="Spatial" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 3.96373 )
visible = false
script = ExtResource( 30 )
loFilename = "res://GNSS_Stylus_Scripts/HareCam.LOScript"

[node name="RigCamera" type="Camera" parent="LOSolver_CameraEye"]
fov = 41.8
near = 0.01
far = 1000.0

[node name="HareScan2_Textured" parent="." instance=ExtResource( 34 )]

[node name="HareScan2_Bluescreen" parent="." instance=ExtResource( 35 )]
visible = false

[connection signal="pressed" from="Panel_UIControls/Button_LoadClearLidarScript" to="." method="_on_Button_LoadClearLidarScript_pressed"]
[connection signal="value_changed" from="Panel_UIControls/HSlider_Transparency" to="." method="_on_HSlider_Transparency_value_changed"]
[connection signal="toggled" from="Panel_UIControls/CheckBox_ShowHelp" to="." method="_on_CheckBox_ShowHelp_toggled"]
[connection signal="pressed" from="Panel_LoadLidarScript_Confirmation/Button_LoadLidarScript" to="." method="_on_Button_LoadLidarScript_pressed"]
[connection signal="pressed" from="Panel_LoadLidarScript_Confirmation/Button_ClearLidarScript" to="." method="_on_Button_ClearLidarScript_pressed"]
[connection signal="pressed" from="Panel_LoadLidarScript_Confirmation/Button_CancelLidarScriptOperation" to="." method="_on_Button_CancelLidarScriptOperation_pressed"]
